samples/_failures_safe/1761514602_3971f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_794f3590.c: In function ‘main’:
./samples/SAFE/__tmp_794f3590.c:147:13: error: expected declaration or statement at end of input
  147 |             }
      |             ^
./samples/SAFE/__tmp_794f3590.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_794f3590.c:147:13: error: expected declaration or statement at end of input
